--- a/client/sites/home.css
+++ b/client/sites/home.css
@@ -23,13 +23,13 @@ body {
 
 .suse-container {
   width: 12vw;
-  height: 15vh;
+  height: 6.5vw;
   padding-top: 0.5%;
   background: #ffffff;
   border: 3px solid #000000;
   position: absolute;
   top: 5vh;
-  right: 10%;
+  right: 10.5%;
   box-shadow: 0.3vw 0.3vw;
 }
 
@@ -42,7 +42,7 @@ body {
   position: absolute;
   padding: 2%;
   width: 30%;
-  height: 52.5%;
+  height: 25vw;
   background: #eecedf;
   border: 3px solid #000000;
   box-shadow: 0.3vw 0.3vw;
