--- a/client/sites/home.css
+++ b/client/sites/home.css
@@ -109,12 +109,35 @@ body {
   box-shadow: 0.3vw 0.3vw;
 }
 
+@keyframes artworks {
+  0% {
+    right: 0px;
+  }
+  25% {
+    right: 1000px;
+  }
+  50% {
+    right: 0px;
+  }
+  75% {
+    right: -1000px;
+  }
+  100% {
+    right: 0px;
+  }
+}
+
 .artworks-container {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 60vh;
+  /* animation-name: artworks;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;  
+  animation-duration: 12s; */
 }
 
 .artwork {
